fix sidebar not displaying correctly on mobile browsers

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -23,6 +23,10 @@ button {
   padding: 0;
 }
 
+button:focus {
+    outline: 1px solid var(--color-accent);
+}
+
 textarea {
   border: none;
   font-size: inherit;
